manifests/dev/nostrarchives/Namespace-nostrarchives.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: nostrarchives
