manifests/dev/nostrarchives/Deployment-nostrarchives.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nostrarchives
  namespace: nostrarchives
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: nostrarchives
      app.kubernetes.io/name: nostrarchives
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nostrarchives
        app.kubernetes.io/name: nostrarchives
    spec:
      containers:
        - command:
            - nostrarchives-api
          image: ghcr.io/lillecarl/nix-csi/scratch:1.0.1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 600
            periodSeconds: 30
            timeoutSeconds: 5
          name: nostrarchives
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
            - containerPort: 8001
              name: ws-search
              protocol: TCP
            - containerPort: 8002
              name: ws-scheduler
              protocol: TCP
            - containerPort: 8003
              name: ws-indexer
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /nix
              name: nix
              subPath: nix
      volumes:
        - csi:
            driver: nix.csi.store
            volumeAttributes:
              nixExpr: |
                [...]
          name: nix
