manifests/dev/nostrarchives/Service-nostrarchives.yaml
apiVersion: v1
kind: Service
metadata:
  name: nostrarchives
  namespace: nostrarchives
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
    - name: ws-search
      port: 8001
      protocol: TCP
      targetPort: ws-search
    - name: ws-scheduler
      port: 8002
      protocol: TCP
      targetPort: ws-scheduler
    - name: ws-indexer
      port: 8003
      protocol: TCP
      targetPort: ws-indexer
  selector:
    app.kubernetes.io/instance: nostrarchives
    app.kubernetes.io/name: nostrarchives
  type: ClusterIP
