manifests/dev/nostrarchives/Ingress-nostrarchives-relay.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nostrarchives-relay
  namespace: nostrarchives
spec:
  ingressClassName: tailscale
  rules:
    - host: nostrarchives-relay.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: nostrarchives
                port:
                  name: ws-search
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nostrarchives-relay.bearded-snake.ts.net
