manifests/dev/nostrarchives/Ingress-nostrarchives.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nostrarchives
  namespace: nostrarchives
spec:
  ingressClassName: tailscale
  rules:
    - host: nostrarchives.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: nostrarchives
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nostrarchives.bearded-snake.ts.net
